# Redes

./: LICENSE  README.md  chat.py  file_share.py  p2p.py
Chat/PeerToPeer/: README.md  chat.py  client.py  gateway.py  node.py  ping.py
Chat/PointToPoint/: README.md  chat.py
File Share/TCP/: client.py  file_share.py  receiver.py  sender.py
File Share/UDP/: client.py  file_share.py  receiver.py  sender.py
P2P/: p2p.py
Semaphore/: chat.py  client.py  gateway.py  node.py
Speedtest/: README.md  TCPSpeedTest.py  UDPSpeedTest.py  client.py  generic_speedtest.py  pyproject.toml  speedtest.py  tcp_speedtest.py  udp_speedtest.py
Speedtest/Download-Upload/: README.md  generic_speedtest.py  pyproject.toml  tcp_speedtest.py  udp_speedtest.py
Speedtest/Upload/: generic_speedtest.py  pyproject.toml  speedtest.py  tcp_speedtest.py  udp_speedtest.py
Tracker/: ping.py
