[tool.poetry]
name = "speedtest"
version = "1.0.0"
description = "Ferramenta para medir a velocidade de uma conexão entre dois computadores."
authors = ["Felipe Dallmann", "Olavo Nascimento"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

